# wasteman.online

./: .dummy.env  .gitignore  Caddyfile  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  wasteman.conf  wasteman.service
tests/: test_cart.py  test_checkout.py
wasteman/: admin.py  cart.py  forms.py  mail.py  models.py  my_stripe.py  settings.py  urls.py  utils.py  views.py  wasteman.service  wsgi.py
wasteman/migrations/: 0001_initial.py  0002_rename_posters_posterorder_variations_and_more.py  0003_address_first_name_address_last_name_and_more.py  0004_address_email.py  0005_remove_posterorder_customer_and_more.py  0006_alter_posterorder_stripe_checkout_session_id.py  0007_alter_address_line_2.py  0008_posterorder_stripe_payment_intent_id.py  0009_remove_posterorder_variations_posterordervariation.py  0010_alter_artworkimage_artwork.py  0011_alter_imagebase_image.py  0012_rename_first_name_address_name_and_more.py  0013_remove_address_zip_address_postal_code_and_more.py  0014_rename_line_1_address_line1_and_more.py  0015_newsletteremail_verified_and_more.py  0016_rename_verified_newsletteremail_confirmed_and_more.py
wasteman/static/wasteman/: main.css
wasteman/templates/: about.html  address.html  artwork.html  artworks.html  base.html  cancel.html  cart.html  home.html  login.html  profile.html  register.html  success.html  terms.html
