[project]
name = "wasteman-online"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "factory-boy>=3.3.3",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "stripe>=14.3.0",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2.9",
    "mypy>=1.19.1",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

# Could be recognized by DJANGO_SETTINGS_MODULE env variable
[tool.django-stubs]
django_settings_module = "wasteman.settings"