[project]
name = "wasteman-online"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "factory-boy>=3.3.3",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "stripe>=14.3.0",
]
